--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -176,7 +176,7 @@
 
   .hero .hero-artboard {
     top: 25vmax;
-    margin-top: 100px;
+    margin-top: 120px;
     width: 30vw;
   }
 
@@ -184,7 +184,8 @@
     top: 33vmax;
     margin-top: 150px;
     left: 38vw;
-    width: 13vw;
+    width: 10vmax;
+    max-height: unset;
   }
 
   .text-block .about-header {
