--- a/src/pages/caseStudies/caseStudies.css
+++ b/src/pages/caseStudies/caseStudies.css
@@ -26,7 +26,7 @@
 .content {
   min-width: 100vw;
   max-width: 100vw;
-  min-height: 80vh;
+  min-height: 100vh;
 }
 
 .flex-wrapper {
@@ -62,9 +62,10 @@
 }
 
 #studyBody {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Museo Sans 300";
   max-width: 45vw;
+  line-height: 1.5;
 }
 
 #studyBody p {
@@ -179,6 +180,38 @@
 
 .sidebar {
   display: none;
+}
+
+footer {
+  background-color: #f6f6f6;
+  display: flex;
+  height: 150px;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .wrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+}
+
+footer .wrapper .footer-list {
+  list-style: none;
+  text-align: center;
+}
+
+footer .wrapper .footer-list li > * {
+  text-decoration: none;
+  color: rgb(17, 17, 17);
+  font-size: 17px;
+  font-family: "Museo Sans 300";
+  line-height: 1.3;
+}
+
+footer .wrapper .footer-list li h4 {
+  font-size: 1.2rem;
+  padding-bottom: 0.6rem;
 }
 
 @media all and (max-width: 768px) {
