--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -66,7 +66,7 @@
     max-height: 500px;
     max-width: 400px;
     min-width: 250px;
-    width: auto;
+    width: 100%;
   }
 
   section.services {
