--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -103,7 +103,7 @@ form label {
 .flex-bubble {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   flex: 1;
   flex-basis: 100%;
   flex-grow: 1;
